# xdispatch

./: .gitignore  .gitlab-ci.yml  .gitmodules  BUGS  CHANGELIST.dox  CHANGELOG.dox  CMakeLists.txt  CTestConfig.cmake  LICENSE.rtf  NOTICE  QtDispatch  QtDispatch.dox  README.dox  README.md  README.rtf  REQUIREMENTS.dox  TODO.txt  Tutorial.dox  benchmark.h  dispatch.dox  dispatch.h  group_blocks.h  object.h  once.h  queue_blocks.h  semaphore.h  source.h  xdispatch.dox  xdispatch.sublime-project
Qt/: CMakeLists.txt  JavaUtils.h  QBlockRunnable  QBlockRunnable.cpp  QBlockRunnable.h  QDispatch  QDispatch.cpp  QDispatchGroup  QDispatchGroup.cpp  QDispatchGroup.h  QDispatchQueue  QDispatchSemaphore  QDispatchSemaphore.cpp  QDispatchSemaphore.h  QIterationBlockRunnable  QIterationBlockRunnable.cpp  QIterationBlockRunnable.h  QIterationRunnable  QIterationRunnable.cpp  _DelayedDispatchEvent.cpp  _DelayedDispatchEvent.h  _DispatchEvent.cpp  _DispatchEvent.h  _DispatchEventQueueImpl.cpp  _DispatchEventQueueImpl.h  _DispatchQueueImpl.cpp  _DispatchQueueImpl.h  _MainEventLoopHandler.cpp  _MainEventLoopHandler.h  qblockrunnable.cpp  qdispatch.cpp  qdispatchapplication.cpp  qdispatchapplication_mac.cpp  qdispatchapplicationprivate.h  qdispatchcoreapplication.cpp  qdispatchcoreapplication_mac.cpp  qdispatchgroup.cpp  qdispatchqueue.cpp  qdispatchsemaphore.cpp  qdispatchsource.cpp  (+7 more)
core/: CMakeLists.txt  atomic.h  config.h  config.h.in  continuation_cache.c  continuation_cache.h  core.c  datatypes.h  debug.c  debug.h  events.c  events.h  execution.c  execution.h  group.c  group.cpp  internal.h  kevent_internal.h  object.c  object_internal.h  once.c  os_windows.c  os_windows.h  protocolServer.c  protocolUser.c  queue.c  queue.cpp  queue_internal.h  queue_private.h  runBlocks.cpp  runBlocks.h  semaphore.c  semaphore_internal.h  shared_constructor.c  source.c  source_internal.h  source_kevent.c  taskqueue.c  taskqueue.h  threadmanager.c  (+7 more)
core/config/: config.h.cmake
core/platform/: atomic.h  platform.h
core/shim/: atomic.h  os_posix.h  os_windows.c  os_windows.h  posix.h  threads_posix.c  threads_posix.h  threads_windows.c  threads_windows.h  time.c  time.h  windows.h
core/src/: apply.c  benchmark.c  blocks.c  blocks.h  continuation_cache.c  continuation_cache.h  debug.c  debug.h  group.c  internal.h  kevent_internal.h  legacy.c  legacy.h  object.c  object_internal.h  private.h  protocol.h  protocolServer.c  protocolServer.h  protocolUser.c  queue.c  queue_internal.h  queue_kevent.c  queue_private.h  semaphore.c  semaphore_internal.h  shared_constructor.c  source.c  source_internal.h  source_kevent.c  source_private.h  time.c
cxx/: CMakeLists.txt  base.cpp  execution.cpp  execution.h  group.cpp  lambda.cpp  once.cpp  queue.cpp  run_lambda.cpp  run_lambda.h  semaphore.cpp  shims.h  source.cpp  source_internal.cpp  source_internal.h  synchronized.cpp  timer.cpp  xdispatch_internal.h
libblocksruntime/: CMakeLists.txt  ChangeLog  Makefile  config.inc  configure
libdispatch/: CMakeLists.txt  version.rc.in
libdispatch/config/: config.h.cmake
libdispatch/man/: dispatch_source_create.3
libdispatch/platform/: atomic.h  platform.h
libdispatch/src/: apply.c  blocks.c  blocks.h  continuation_cache.c  continuation_cache.h  debug.c  debug.h  internal.h  object.c  object_internal.h  private.h  protocolUser.c  queue.c  queue_kevent.c  shared_constructor.c  source_kevent.c  source_private.h  time.c
libkqueue/: CMakeLists.txt  config.h.in  libkqueue.sln  libkqueue.vcxproj
libkqueue/test/: CMakeLists.txt  common.h  config.h  configure  kqtest.vcxproj
libpthread_workqueue/: BUGS  CMakeLists.txt  ChangeLog  LICENSE  Makefile  config.inc  configure  libpthread_workqueue.sln  libpthread_workqueue.vcxproj  rpm.spec.in
libpthread_workqueue/include/: pthread_workqueue.h
libpthread_workqueue/kern/: Makefile  pthread_workqueue.c  test.c  threadpool.c
libpthread_workqueue/libpthread_workqueue.xcodeproj/: project.pbxproj
libpthread_workqueue/src/: api.c  debug.h  private.h  thread_info.h  thread_rt.h  witem_cache.c
libpthread_workqueue/testing/: CMakeLists.txt  Makefile
libqtdispatch/: CMakeLists.txt  qdispatch.cpp  qdispatchapplication.cpp  qdispatchapplication_mac.cpp  qdispatchapplicationprivate.h  qdispatchcoreapplication.cpp  qdispatchcoreapplication_mac.cpp  qdispatchgroup.cpp  qdispatchqueue.cpp  qdispatchsemaphore.cpp  qdispatchsource.cpp  qdispatchsourcetypes.cpp  qdispatchtimer.cpp  qrunnableoperations.cpp  qrunnableoperations.h  version.rc.in
libqtdispatch/src/: qdispatch.cpp  qdispatchgroup.cpp  (+12 more)
libxdispatch/: CMakeLists.txt  base.cpp  execution.cpp  execution.h  group.cpp  once.cpp  queue.cpp  semaphore.cpp  shared_constructor.cpp  source.cpp  source_internal.cpp  source_internal.h  synchronized.cpp  timer.cpp  version.rc.in  xdispatch_internal.h
pthreads-w32/: CMakeLists.txt  Makefile  config.h  version.rc
tests/: CMakeLists.txt  Qt_dispatch_cascade.cpp  Qt_dispatch_cascade_blocks.cpp  Qt_dispatch_cascade_lambda.cpp  Qt_dispatch_current.cpp  Qt_dispatch_current_blocks.cpp  Qt_dispatch_current_lambda.cpp  Qt_dispatch_debug.cpp  Qt_dispatch_fibo.cpp  Qt_dispatch_group.cpp  Qt_dispatch_group_blocks.cpp  Qt_dispatch_group_lambda.cpp  Qt_dispatch_mainqueue.cpp  Qt_dispatch_mainqueue_blocks.cpp  Qt_dispatch_mainqueue_lambda.cpp  Qt_dispatch_queue.cpp  Qt_dispatch_queue_blocks.cpp  Qt_dispatch_queue_lambda.cpp  Qt_dispatch_semaphore.cpp  Qt_dispatch_semaphore_blocks.cpp  Qt_dispatch_semaphore_lambda.cpp  Qt_dispatch_serialqueue.cpp  Qt_dispatch_serialqueue_blocks.cpp  Qt_dispatch_serialqueue_lambda.cpp  Qt_dispatch_source_device.cpp  Qt_dispatch_source_network.cpp  Qt_dispatch_source_network_blocks.cpp  Qt_dispatch_source_network_lambda.cpp  Qt_dispatch_source_signal.cpp  Qt_dispatch_source_signal_blocks.cpp  Qt_dispatch_source_signal_lambda.cpp  Qt_dispatch_timeout.cpp  Qt_dispatch_timeout_blocks.cpp  Qt_dispatch_timeout_lambda.cpp  Qt_dispatch_timer.cpp  Qt_early_dispatch.cpp  Qt_early_dispatch_blocks.cpp  Qt_early_dispatch_lambda.cpp  Qt_free_blocks.cpp  Qt_free_lambda.cpp  (+96 more)
(+296 files in other folders)
